# blackjack-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: example_experiment.yaml  groq_experiment.yaml
src/blackjack_agents/: __main__.py  cli.py  experiment.py  manager.py  shoe.py  state.py
src/blackjack_agents/agents/: base.py  basic_strategy.py  card_counter.py  random_agent.py  simple_agent.py
src/blackjack_agents/agents/llm/: base_llm_agent.py  claude_agent.py  groq_agent.py  openai_agent.py
tests/: conftest.py  test_experiment.py  test_manager.py  test_shoe.py  test_state.py
tests/test_agents/: test_basic_strategy.py  test_llm_agents.py
