[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackjack-agents"
version = "0.1.0"
description = "Empirical blackjack strategy testing with pluggable AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "blackjack21>=5.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.scripts]
blackjack-experiment = "blackjack_agents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blackjack_agents"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
